# app-vocacional

./: .gitignore  LICENSE  PENDENCIAS.md  README.md  README_NOVO.md  SESSOES.md
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  constants.py  deps.py  main.py
backend/app/routers/: admin.py  assessments.py  cities.py  leads.py  results.py
backend/app/schemas/: assessment.py  city.py  lead.py  result.py
backend/app/services/: email.py  recommendation.py
backend/tests/: smoke_e2e.py  test_recommendation.py
docs/: ADMIN_SETUP.md  API.md  DEPLOY_VERCEL.md  RESEND_SETUP.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: admin.ts  client.ts  endpoints.ts
frontend/src/components/: Button.tsx  CityCombobox.tsx  Layout.tsx  Loading.tsx  ProgressBar.tsx
frontend/src/pages/: Assessment.tsx  Onboarding.tsx  Result.tsx
sql/: 001_extensions.sql  002_dimensions.sql  003_junctions.sql  004_assessment.sql  005_transactional.sql  010_rls_policies.sql  README.md
sql/seeds/: 100_aptitude_areas.sql  110_cities.sql  111_cities_extra.sql  112_cities_top319.sql  120_professions.sql  130_courses.sql  140_institutions.sql  141_institutions_extra.sql  150_profession_areas.sql  160_profession_courses.sql  170_institution_courses.sql  171_institution_courses_extra.sql  180_questions_options.sql  181_questions_options_extra.sql
(+3 files in other folders)
