[project]
name = "app-vocacional-backend"
version = "0.1.0"
description = "Backend FastAPI do app de orientação vocacional (RIASEC)."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.1",
    "supabase==2.10.0",
    "httpx>=0.26,<0.28",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
